# ProjetSFML

./: .gitignore  CMakeLists.txt  README.md
include/: AssetsManager.h  Camera.h  Car.h  CheckpointManager.h  CollisionMask.h  Config.h  Engine.h  Entity.h  GameManager.h  GhostManager.h  Hud.h  Menu.h  Player.h  ScoreManager.h  Track.h  World.h
src/: AssetsManager.cpp  Camera.cpp  Car.cpp  CheckpointManager.cpp  CollisionMask.cpp  Engine.cpp  Entity.cpp  GameManager.cpp  GhostManager.cpp  Hud.cpp  Menu.cpp  Player.cpp  Track.cpp  World.cpp
